@@ -247,3 +247,4 @@ Revision	Log Message
 243		Update localization text for converter mod
 244		Fix province discovery for land provinces
 245		Fix crash bug if religions tie in a province
+246		Don't allow advisors to try to insert new provinces
